podcasts logo attribution stretch issue fix

--- a/resources/assets/sass/layout.scss
+++ b/resources/assets/sass/layout.scss
@@ -11,6 +11,8 @@ body {
     /* background-color: $light-gray;*/
     margin: 0;
     font-family:$primary-typeface;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .page {
@@ -28,6 +30,8 @@ body {
     margin-left: auto;
     margin-right: auto;
 
+overflow: auto;
+    -webkit-overflow-scrolling: touch;
     @include breakpoint($pc){
         border:0px ;
         max-width: 66em;
